[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/GameOver.gd" type="Script" id=1]
[ext_resource path="res://UI/Buttons/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/pixelmix_bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 2
font_data = ExtResource( 3 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.705882 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 320.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.666667, 0.647059, 0.647059, 1 )
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 320.0
margin_bottom = 74.0

[node name="YourScore" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 8.0
custom_colors/font_color = Color( 0.243137, 0.698039, 0.87451, 1 )
custom_fonts/font = SubResource( 1 )
text = "Your score"
align = 1

[node name="Score" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 12.0
margin_right = 320.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0.243137, 0.698039, 0.87451, 1 )
custom_fonts/font = SubResource( 2 )
text = "120"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaderboardButton" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 82.0
margin_right = 320.0
margin_bottom = 102.0

[node name="Label" parent="VBoxContainer/LeaderboardButton" index="0"]
text = "SAVE SCORE"

[node name="RestartButton" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 110.0
margin_right = 320.0
margin_bottom = 130.0

[node name="Label" parent="VBoxContainer/RestartButton" index="0"]
text = "RESTART"

[node name="QuitButton" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 138.0
margin_right = 320.0
margin_bottom = 158.0

[node name="Label" parent="VBoxContainer/QuitButton" index="0"]
text = "QUIT"

[connection signal="pressed" from="VBoxContainer/LeaderboardButton" to="." method="_on_LeaderboardButton_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]

[editable path="VBoxContainer/LeaderboardButton"]
[editable path="VBoxContainer/RestartButton"]
[editable path="VBoxContainer/QuitButton"]
